<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CadastroFilmeActivity">

    <include layout="@layout/toolbar"/>

    <RelativeLayout
        android:id="@+id/rlFotoDoFilme"
        android:layout_width="0dp"
        android:layout_height="240dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <ImageView
            android:id="@+id/imageViewFotoDoFilme"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="#1f1f1f"
            android:src="@drawable/ic_insert_photo_white_24" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/buttonAbrirGaleria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="8dp"
            android:src="@drawable/ic_insert_photo_white_24" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/buttonAbrirCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@+id/buttonAbrirGaleria"
            android:layout_margin="8dp"
            android:src="@drawable/ic_photo_24" />

    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/rlFotoDoFilme"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilNomeDoFilme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

                    <EditText
                    android:id="@+id/editTextNomeDoFilme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nome_do_filme"
                    android:inputType="textCapWords"/>

        </com.google.android.material.textfield.TextInputLayout>





        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilProdutoraDoFilme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tilNomeDoFilme"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/editTextProdutoraDoFilme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/produtora_do_filme"
                android:inputType="textCapWords"/>

        </com.google.android.material.textfield.TextInputLayout>






        <TextView
            android:id="@+id/textViewDisponibilidade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disponibilidade"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilProdutoraDoFilme"
            android:layout_marginTop="8dp"
            android:textStyle="bold"/>


        <Spinner
            android:id="@+id/spinnerDisponibilidade"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textViewDisponibilidade"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:entries="@array/disponibilidades"
            style="@style/Widget.AppCompat.Spinner.Underlined"/>

        <TextView
            android:id="@+id/textViewNotaDoFilme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nota_do_filme"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinnerDisponibilidade"
            android:layout_marginTop="8dp"
            android:textStyle="bold"/>

        <RatingBar
            android:id="@+id/ratingBarNotaDoFilme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:isIndicator="false"
            android:numStars="5"
            android:rating="3.5"
            android:stepSize="0.5"
            app:layout_constraintTop_toBottomOf="@id/textViewNotaDoFilme"
            app:layout_constraintRight_toRightOf="parent"
            style="?android:attr/ratingBarStyleIndicator"/>



        <CheckBox
            android:id="@+id/checkboxAssistido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/assistido"
            app:layout_constraintBottom_toBottomOf="@id/ratingBarNotaDoFilme"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textSize="18sp"/>





    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>